# rust-bytecode-vm

./: .editorconfig  .gitattributes  Cargo.toml  README.md  TODO.md  bf2.rbcvm  test.rbcvm  test2.rbcvm
.github/workflows/: rust.yml
.hooks/: autohook.sh
.hooks/pre-commit/rs/: 01-lint-rust  02-test-rust  03-format-rust  04-check-opcode-tryfrom.py
.hooks/scripts/: 01-lint-rust  02-test-rust  03-format-rust  04-check-opcode-tryfrom.py
lib/: array.rbcvm  arraylist.rbcvm  char.rbcvm  fn.rbcvm  hash.rbcvm  hashmap.rbcvm  iter.rbcvm  json.rbcvm  result.rbcvm  string.rbcvm
src/: agent.rs  bytecode.rs  code_object.rs  compiler.rs  debuginfo.rs  disassemble.rs  interpreter.rs  intrinsics.rs  main.rs  module.rs  opcode.rs  parser.rs  value.rs
src/compiler/: artifact.rs  bytecode.rs  codegen.rs  disassemble.rs  mod.rs  parser.rs  value.rs
src/compiler/opt/: mod.rs
vim-plugin/after/ftplugin/: rbcvm.vim
vim-plugin/ftdetect/: rbcvm.vim
vim-plugin/indent/: rbcvm.vim
vim-plugin/syntax/: rbcvm.vim
