[package]
name = "rust-bytecode-vm"
version = "0.1.1"
authors = ["Patrick Gingras <775.pg.12@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
pretty_assertions = "0.6.1"
